crates/php-parser/tests/snapshots/recovery_tests__missing_class_name.snap
---
source: tests/recovery_tests.rs
expression: program
---
Program {
    statements: [
        Nop {
            span: Span {
                start: 0,
                end: 6,
            },
        },
        Class {
            attributes: [],
            modifiers: [],
            name: Token {
                kind: Error,
                span: Span {
                    start: 0,
                    end: 0,
                },
            },
            extends: None,
            implements: [],
            members: [
                Property {
                    attributes: [],
                    modifiers: [
                        Token {
                            kind: Public,
                            span: Span {
                                start: 26,
                                end: 32,
                            },
                        },
                    ],
                    ty: None,
                    entries: [
                        PropertyEntry {
                            name: Token {
                                kind: Variable,
                                span: Span {
                                    start: 33,
                                    end: 35,
                                },
                            },
                            default: None,
                            span: Span {
                                start: 33,
                                end: 35,
                            },
                        },
                    ],
                    doc_comment: None,
                    span: Span {
                        start: 26,
                        end: 42,
                    },
                },
            ],
            doc_comment: None,
            span: Span {
                start: 10,
                end: 47,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 0,
        end: 47,
    },
}
